--- a/Image_manipulations.ipynb
+++ b/Image_manipulations.ipynb
@@ -65,7 +65,7 @@
    "id": "a3e2fa1e",
    "metadata": {},
    "source": [
-    "Below is the implementaion of the above written code"
+    "Below is an implementaion of the above written code"
    ]
   },
   {
